--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -29,7 +29,7 @@
 
     &-scenario {
         &-chronologie {
-            margin-bottom: 100px;
+            margin-bottom: 400px;
             position: relative;
             left: 800px;
 
@@ -63,7 +63,7 @@
                     flex-direction: column;
                     margin-bottom: 100px;
                     position: relative;
-                    top: -868px;
+                    top: -734px;
 
                     &-missionPieces {
                         display: flex;
@@ -73,10 +73,30 @@
                     &-roles {
                         display: flex;
                         flex-direction: column;
+                        position: relative;
+                        top: -359px;
 
                         &-role {
                             display: flex;
                             flex-direction: row;
+                            margin-bottom: 50px;
+
+                            &-chronologie {
+                                margin-bottom: 25px;
+                                margin-left: 400px;
+                    
+                                &-title {
+                                    font-family: 'Glacial Indifference Bold';
+                                    font-size: 20px;
+                                    margin-bottom: 10px;
+                                }
+                    
+                                &-steps {
+                                    display: flex;
+                                    flex-direction: row;
+                                    height: 300px;
+                                }
+                            }
 
                             &-tasks {
                                 display: flex;
