--- a/src/app/pieces/step/step.component.scss
+++ b/src/app/pieces/step/step.component.scss
@@ -113,7 +113,7 @@
                 width: 50px;
                 border-top-left-radius: 10px;
                 border-bottom-left-radius: 10px;
-                text-align: right;
+                text-align: center;
             }
 
             select {
