--- a/src/app/pieces/tasks/random-event/random-event.component.html
+++ b/src/app/pieces/tasks/random-event/random-event.component.html
@@ -1,11 +1,13 @@
-<div class="piece" [ngStyle]="{'width': pieceWidth}" (mouseover)="displayMenu='show'" (mouseleave)="displayMenu='hide'">
+<div class="piece" [ngStyle]="{'width': pieceWidth}" (mouseover)="displayMenu='show'" (mouseleave)="displayMenu='hide'; displayPrequires='hide'; displaySymbolChoice='hide'">
     <div class="piece-attach piece-attach-left"></div>
     <div class="piece-attach piece-attach-right"></div>
 
     <div class="piece-menu" [class]="displayMenu">
+        <mat-icon fontIcon="arrow_back_ios" (click)="moveTask('left')" *ngIf="canMoveTo('left')"></mat-icon>
         <mat-icon fontIcon="backspace" (click)="onClickErase()"></mat-icon>
         <mat-icon fontIcon="delete" (click)="onClickDelete()"></mat-icon>
         <mat-icon fontIcon="more_vert" (click)="onClickDots()"></mat-icon>
+        <mat-icon fontIcon="arrow_forward_ios" (click)="moveTask('right')" *ngIf="canMoveTo('right')"></mat-icon>
     </div>
 
     <div class="piece-symbolchoice" [class]="displaySymbolChoice">
@@ -92,21 +94,21 @@
 
     <div class="piece-form">
         <div class="piece-form-top">
-            <input class="piece-form-top-identifier" name="identifier" type="text" placeholder="A" min="1" maxlength="5"/>
+            <input class="piece-form-top-identifier" name="identifier" type="text" [(ngModel)]="task.identifier" placeholder="A" min="1" maxlength="5"/>
             <div class="piece-form-top-title">Événement<br>aléatoire</div>
             <button mat-button class="piece-form-top-symbol" (click)="changeDisplaySymbolChoice()">
-                <mat-icon *ngIf="symbol" [style.color]="symbolColor" [fontIcon]="symbol"></mat-icon>
+                <mat-icon *ngIf="task.symbol.symbol" [style.color]="task.symbol.color" [fontIcon]="task.symbol.symbol"></mat-icon>
             </button>    
         </div>
-        <textarea class="piece-form-content" placeholder="Positionner dans l'ordre les balises HTML principales"></textarea>
+        <textarea class="piece-form-content" [(ngModel)]="task.objective" placeholder="Le client modifie sa demande"></textarea>
         <div class="piece-form-bottom">
             <button mat-button class="piece-form-bottom-prerequires" (click)="changeDisplayPrerequires()">
                 Prérequis
             </button>
             <div class="piece-form-bottom-duration">
-                <input name="value" type="text" [(ngModel)]="duration" (input)="durationChange()"/>
-                <select name="unite" [(ngModel)]="durationUnit" (change)="durationChange()">
-                    <option selected value="UT">UT</option>
+                <input name="value" type="number" [(ngModel)]="task.duration" (input)="durationChange()"/>
+                <select name="unite" [(ngModel)]="task.durationUnit" (change)="durationChange()">
+                    <option value="UT">UT</option>
                     <option value="min">min</option>
                     <option value="tours">tours</option> 
                 </select>
