--- a/src/app/pieces/tasks/random-event/random-event.component.scss
+++ b/src/app/pieces/tasks/random-event/random-event.component.scss
@@ -9,7 +9,7 @@
 
     &-menu {
         position: absolute;
-        width: 150px;
+        width: 200px;
         height: 50px;
         background-color: #f7f7f7;
         z-index: -1;
@@ -94,13 +94,13 @@
         height: 150px;
         background-color: #f7f7f7;
         z-index: -1;
-        bottom: 0;
-        left: 25px;
+        bottom: 10px;
+        left: 50px;
         border: solid black 1px;
-        border-bottom-left-radius: 10px;
+        border-top-right-radius: 10px;
         border-bottom-right-radius: 10px;
         transition: transform 0.5s ease;
-        border-top: none;
+        border-left: none;
         display: flex;
         flex-direction: row;
 
@@ -183,7 +183,7 @@
     }
 
     &-prerequires.show {
-        transform: translateY(100%);
+        transform: translateX(100%);
     }
 
     &-attach {
@@ -303,7 +303,7 @@
                 input {
                     border-top-right-radius: 0px;
                     border-bottom-right-radius: 0px;
-                    width: 20px;
+                    width: 50px;
                     text-align: center;
                     z-index: 2;
                 }
