--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -118,7 +118,7 @@
             <label for="unity">Intégrer le jeu sous Unity</label>
         </div>
         <button mat-mini-fab color="white" (click)="downloadFile()"><mat-icon fontIcon="download_file"></mat-icon></button>
-        <button mat-mini-fab color="white" (click)="test()"><mat-icon fontIcon="upload-file"></mat-icon></button>
+        <button mat-mini-fab color="white"><mat-icon fontIcon="upload-file"></mat-icon></button>
         <input type="file" (change)="onFileSelected($event)">
     </div>
 </div>
