--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -103,7 +103,7 @@
     </div>
 
     <div class="container-sider">
-        <app-rules class="container-sider-element"></app-rules>
+        <app-rules class="container-sider-element" [scenario]="scenario"></app-rules>
         <app-role-occurence class="container-sider-element"></app-role-occurence>
         <app-supplementary-task class="container-sider-element"></app-supplementary-task>
         <app-repeat class="container-sider-element"></app-repeat>
