--- a/src/app/sider-pieces/rules/rules.component.html
+++ b/src/app/sider-pieces/rules/rules.component.html
@@ -2,41 +2,24 @@
     <div class="piece-form">
         <div class="piece-form-rules">
             <div class="piece-form-title">Règles du jeu</div>  
-            <textarea></textarea>
+            <textarea [(ngModel)]="scenario.gameRules"></textarea>
         </div>
         <div class="piece-form-ressources">
             <div class="piece-form-title">Ressources / objets</div>
             <div class="piece-form-ressources-object">
-                <div class="piece-form-ressources-object-infos">
+                <div class="piece-form-ressources-object-infos" *ngFor="let ressource of scenario.ressources; let i = index">
                     <div class="piece-form-ressources-object-infos-name">
                         <label for="name">Nom</label>
-                        <input name="name" type="text"/>
+                        <input name="name" type="text" [(ngModel)]="ressource.name"/>
                     </div>
                     <div class="piece-form-ressources-object-infos-quantity">
                         <label for="quantity">Quantité</label>
-                        <input name="quantity" type="text"/>
+                        <input name="quantity" type="text" [(ngModel)]="ressource.number"/>
                     </div>
-                    <button mat-button><mat-icon fontIcon="remove"></mat-icon></button>              
+                    <button mat-button (click)="removeRessource(i)"><mat-icon fontIcon="remove"></mat-icon></button>                           
                 </div>
-
-                <div class="piece-form-ressources-object-infos">
-                    <div class="piece-form-ressources-object-infos-name">
-                        <label for="name">Nom</label>
-                        <input name="name" type="text"/>
-                    </div>
-                    <div class="piece-form-ressources-object-infos-quantity">
-                        <label for="quantity">Quantité</label>
-                        <input name="quantity" type="text"/>
-                    </div>
-                    <button mat-button><mat-icon fontIcon="remove"></mat-icon></button>              
-                </div>
-
-                <button mat-button><mat-icon fontIcon="add"></mat-icon></button>
+                <button mat-button (click)="addRessource()"><mat-icon fontIcon="add"></mat-icon></button>
             </div>
         </div>
-        <div class="piece-form-validate">
-            <button mat-button>Valider</button>
-        </div>
-
     </div>
 </div>
